<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Hello World, Launcher!</string>
    <string name="app_name">CAPPU Desktop</string>
    <string name="No_SIM_card">No SIM card</string>
    <string name="all_app_name">all application name</string>
    <string name="tools">Tools</string>
    <string name="Wireless_local_area_network">WLAN</string>
    <string name="open">on</string>
    <string name="close">off</string>
    <string name="Mobile_Internet">GPRS</string>
    <string name="textsize_title">Text size</string>
    <string name="launcher_workspace_font_size">Launcher font</string>
    <string name="font_level_big">Default</string>
    <string name="font_level_small">small</string>
    <string name="font_level_big_most">Bigger</string>
    <string name="quickset_theme">theme</string>
    <string name="security">Security help</string>
    <string name="general">general</string>
    <string name="ring_setting">Ringtone setting</string>
    <string name="cancel">cancel</string>
    <string name="voice">Voice</string>
    <string name="workspase_lock">Desktop Lock</string>
    <string name="workspase_lock_info">Desktop lock can not replace the desktop application and the background color of the magnetic block</string>
    <string name="Desktop_lock_screen_calls">desktop/lockscreen/calls</string>
    <string name="textsize_default">the default</string>
    <string name="desktop_title_mode">mode</string>
    <string name="Parents_full_version">Parents complete version</string>
    <string name="Family_account">Family account</string>
    <string name="menu_system">menu setting</string>
    <string name="android_system">Android setting</string>
    <string name="setting_aboutapk">about software</string>
    <string name="desktop_title_original">return to android</string>
    <string name="setting">Setting</string>
    <string name="system_setting">System setting</string>
    <string name="workspace_edit">Desktop edit</string>
    <string name="weather">Weather</string>
    <string name="weather_speech">Weather Speech</string>
    <string name="quickopen_tool">Tools</string>
    <string name="Close_the_WLAN_network">just turn off WLAN</string>
    <string name="prompt">prompt</string>
    <string name="Disconnect_the_wireless_network">\u0009 Then shut down and disconnect from the wireless network connection, when need to connect in time, click the Internet switch to connect to the Internet </string>
    <string name="Specific_opening_way">\u0009In the absence of a wireless network, you can through the mobile data network on the Internet, the premise is need to open the mobile Internet traffic monthly package, and specific measures for opening please consult children or local communications operators.</string>
    <string name="Turn_on_WLAN_switch">I.turn on WLAN switch</string>
    <string name="Connect_to_the_wireless_network">II. connect wireless network needs the follewing operation</string>
    <string name="Select_the_network">1.Select the network that you want to connect</string>
    <string name="Enter_the_password">2.Input the password</string>
    <string name="connection_is_successful">3.Connection success</string>
    <string name="operation_of_the_network">\u0009 After setting success,you can carry out operations that need the Internet just like suffing the Internet,searching the weather forecast, watching video, listening to music, downloading applications and games online 。</string>
    <string name="Assist_complete">\u0009 If you don\'t understand how to setting，you can complete that with the help of your children</string>
    <string name="Enter_the_wireless_network_Settings">Enter the wlan</string>
    <string name="free_internet">WLAN</string>
    <string name="open_wifi"> open wlan</string>
    <string name="phone_gprs">GPRS</string>
    <string name="popu_title">Selections</string>
    <string name="run">running</string>
    <string name="replace">replace</string>
    <string name="replace_app">replace the app</string>
    <string name="edit_cell">Edit cell backgroud</string>
    <string name="font_level_default">normal</string>
    <string name="font_up">font up</string>
    <string name="big">big</string>
    <string name="maximum">maximum</string>
    <string name="font_info">The last two adjustment applies only to calls, short messages, contacts, and the phone book. </string>
    <string name="quickset_textsize">Text size</string>
    <string name="weather_notify">Please click on the specified location</string>
    <string name="alarm_size">Clock </string>
    <string name="desktop_title_calendar">The Calendar </string>
    <string name="desktop_title_gallery">Family Clbum </string>
    <string name="desktop_title_contacts">The Contacts</string>
    <string name="desktop_title_phonebook">The Phone Book </string>
    <string name="desktop_title_yuequpingshu">QuLe And Ballad Singing </string>
    <string name="desktop_title_life">Encyclopedia of Life </string>
    <string name="activity_not_found">"You did not install any application on your mobile phone."</string>
    <string name="app_default_title">Reset</string>
    <string name="dialog_confirm">confirm</string>
    <string name="dialog_cancel">cancle</string>
    <string name="gprs_open_confirm_title">Wanning</string>
    <string name="gprs_open_confirm_message">Suf the Internet with SIM card will produce traffic fees,whether or not to continue?</string>
    <string name="load_wait">"Loading\u2026"</string>
    <string name="tips">Your device has been accelerated!</string>
    <string name="pushtopass">Push To Pass</string>
    <string name="clearapp">"clear <xliff:g id="count">%s</xliff:g>  app"</string>
    <string name="totalmemory">"Storage<xliff:g id="total">%s</xliff:g>  MB"</string>
    <string name="availmemory">"Available<xliff:g id="avail">%s</xliff:g> MB"</string>
    <string name="setting_cell_background">setting cell background</string>
    <string name="launcher_phone">Phone</string>
    <string name="launcher_mms">Mail</string>
    <string name="launcher_clock">Clock</string>
    <string name="launcher_time_setting">Time Setting</string>
    <string name="launcher_ararm_clock">Alarm Clock</string>
    <string name="launcher_weather">Weather</string>
    <string name="protection_show_password">Show the password(the origin password:9999)</string>
    <string name="privacy_init_pwd_hint_again">Enter your new password again</string>
    <string name="privacy_init_pwd_hint">Create password of 1 to 12 numbers </string>
    <string name="btn_default">default</string>
    <string name="privacy_forget_password"><u>forget the password？</u></string>
    <string name="privacy_protection_pwd_hint">Enter your old password</string>
    <string name="privacy_change_pwd_hint_again">Enter your new password</string>
    <string name="privacy_change_pwd_hint">Enter your password</string>
    <string name="gprs_on_pwd_title">GPRS Password</string>
    <string name="gprs_on_pwd_state">Turn Password On</string>
    <string name="privacy_set_password">Setting Password</string>
    <string name="privacy_modify_password">Require Password</string>
    <string name="privacy_change_pwd_error">Password Incorrect</string>
    <string name="privacy_reset_password">Reset Password</string>
    <string name="privacy_reset_password_message">Do you want to reset your password</string>
    <string name="Success">Success</string>
    <string name="privacy_check_pwd">Confirm Password</string>
    <string name="add">Add</string>
    <string name="option">Option</string>
    <string name="slide_to_unlock">slide to unlock</string>
    <string name="week_1">Monday</string>
    <string name="lunar_1">The lunar calendar in February twenty-five</string>
    <string name="lunar">The Lunar Calendar</string>
    <string name="i99_year">Year</string>
    <string name="i99_month">Month</string>
    <string name="i99_date">Date</string>
    <string name="i99_leap">Leap</string>
    <string name="i99_date_10">the tenth</string>
    <string name="i99_date_20">the twentieth</string>
    <string name="i99_date_30">the thirtieth</string>
    <string name="i99_sos_title">Emergency(SOS)</string>
    <string name="i99_sos_no_contact">No Emergency Contact</string>
    <string name="network_01">The first wireless network connection of the wireless settings click on the bottom</string>
    <string name="network_02">The second open WLAN switch</string>
    <string name="network_03">The third click on your home wireless network</string>
    <string name="network_04">The fourth enter your home WiFi password click "connection"</string>
    <string name="network_05">The fifth connect successfully</string>
    <string name="network_06">The sixth Wireless network connection is used for the first time the need to manually enter the password, the subsequent use will automatically connect (network password change except)</string>
    <string-array name="i99_lunar_month">
        <item>正</item>
        <item>正</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>七</item>
        <item>八</item>
        <item>九</item>
        <item>十</item>
        <item>十一</item>
        <item>十二</item>
    </string-array>
    <string-array name="i99_date_0">
        <item>初</item>
        <item>十</item>
        <item>廿</item>
        <item>卅</item>
        <item></item>
    </string-array>
    <string-array name="i99_date_1">
        <item>date</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>七</item>
        <item>八</item>
        <item>九</item>
        <item>十</item>
    </string-array>
    <string-array name="i99_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="abbrev_wday_month_day_no_year">M 月 d  日</string>
    <string name="widget_initial_text">"touch to select music"</string>
    <string name="mian_menu_switch">Main Screen Setting</string>
    <string name="about_care_os">About Care Os</string>
    <string name="theme_select">Theme</string>
    <string name="i99_delete">Delete</string>
    <string name="i99_edit">Edit</string>
    <string name="i99_create_contact">Create</string>
    <string name="i99_select">Select</string>
    <string name="i99_option">Options</string>
    <string name="i99_copy_info">Copy Information</string>
    <string name="i99_quick_select_title">Quick Contacts</string>
    <string name="i99_add_quick_contacts_summery">add a new quick contact</string>
    <string name="i99_select_quick_contacts_summery">add from phone book</string>
    <string name="i99_add_quick_info">You can call and send message to the people that are quick contact more convenient.</string>
    <string name="i99_add">add</string>
    <string name="i99_remove">remove</string>
    <string name="action_settings">Settings</string>
    <string name="modify">Modify Location</string>
    <string name="update_style">Update mode</string>
    <string name="start_update_time">Start update time</string>
    <string name="stop_update_time">Stop update time</string>
    <string name="update_interval_time">Update interval</string>
    <string name="movement">Cappu Nurse</string>
     <string name="speaker">Receiver Stronger</string>
    <string name="home_key_wake_up">Home Wake Up</string>
    <string name="indicator_light">Indicator Light</string>
    <string name="launcher_speech_time">Weather broadcast time setting</string>
    <string name="low_battery_worring">Low Battery Woring</string>
    <string name="setting_wallpaper">wallpaper</string>
    <string name="clock_setting">Cover clock Settings</string>
</resources>